--- a/MEILI_Travel_Diary/package.json
+++ b/MEILI_Travel_Diary/package.json
@@ -16,6 +16,7 @@
     "intro.js": "^1.1.1",
     "jade": "~1.6.0",
     "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3"
+    "serve-favicon": "~2.1.3",
+    "pg": "6.1.0"
   }
 }
