--- a/containers/docker-compose.yml
+++ b/containers/docker-compose.yml
@@ -6,9 +6,9 @@ services:
       - db
     volumes:
       - ./controller/TestData:/testdata
-    command: ./wait-for-it db:5432 -- pg_restore -i -h db -U postgres -d SPOT_Gothenburg -v /testdata/basic_testable.backup
+    command: ./wait-for-it -t 40 db:5432 -- ./init
   db:
-    image: mdillon/postgis:9.3
+    build: ./db
     environment:
       POSTGRES_USER: postgres
       POSTGRES_DB: SPOT_Gothenburg
