--- a/MEILI_Travel_Diary/package.json
+++ b/MEILI_Travel_Diary/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node bin/www",
-    "test": "mocha"
+    "test-client": "mocha-phantomjs -s webSecurityEnabled=false test/index.html"
   },
   "main": "bin/www",
   "dependencies": {
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^3.1.1"
+    "mocha": "^3.1.1",
+    "mocha-phantomjs": "^4.1.0"
   }
 }
