--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ npm-debug.log
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-.idea/workspace.xml
-.idea/tasks.xml
+MEILI-Travel-Diary/.idea/workspace.xml
+MEILI-Travel-Diary/.idea/tasks.xml
 
 # Sensitive or high-churn files:
 .idea/dataSources.ids
