--- a/MEILI_Travel_Diary/package.json
+++ b/MEILI_Travel_Diary/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node bin/www",
-    "test-client": "mocha-phantomjs -s webSecurityEnabled=false test/integration/index.html"
+    "test-client": "mocha-phantomjs --ignore-resource-errors -s webSecurityEnabled=false test/integration/index.html"
   },
   "main": "bin/www",
   "dependencies": {
