--- a/MEILI_Travel_Diary/package.json
+++ b/MEILI_Travel_Diary/package.json
@@ -14,11 +14,14 @@
     "debug": "~2.0.0",
     "ejs": "~1.0",
     "express": "~4.9.0",
+    "express-session": "^1.14.1",
     "intro.js": "^1.1.1",
     "jade": "~1.6.0",
     "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
-    "pg": "6.1.0"
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "pg": "6.1.0",
+    "serve-favicon": "~2.1.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
