--- a/MEILI_Travel_Diary/package.json
+++ b/MEILI_Travel_Diary/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "ejs": "~1.0",
+    "es6-promise": "^3.1.2",
     "express": "~4.9.0",
     "express-session": "^1.14.1",
     "intro.js": "^1.1.1",
