Added the geographical initialization script for MEILI. The script is linked with the upstream MEILI database repository.

--- a/MEILI_Travel_Diary/package.json
+++ b/MEILI_Travel_Diary/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node bin/www",
-    "test-client": "mocha-phantomjs --ignore-resource-errors -s webSecurityEnabled=false test/integration/index.html?SILENT=$SILENT"
+    "test-client": "mocha-phantomjs --ignore-resource-errors -s webSecurityEnabled=false test/integration/index.html?SILENT=$SILENT",
+ "init_meili_with_zone":"bash ./init_meili.sh"
   },
   "main": "bin/www",
   "dependencies": {
